--- a/K_Bridge/Views/User/EditEmail.cshtml
+++ b/K_Bridge/Views/User/EditEmail.cshtml
@@ -5,11 +5,11 @@
 
 <div class="container mt-5">
     <div class="row justify-content-center">
-        <div class="col-md-6 col-lg-8">
+        <div class="col-10">
             <h2 class="text-color-header mb-4">Cập nhật email người dùng</h2>
             <p class="fs-12 text-color-header">Nhập email mới và mật khẩu hiện tại.</p>
 
-            <form asp-action="EditEmail" method="post" id="editEmailForm">
+            <form asp-action="EditEmail" method="post" id="editEmailForm" autocomplete="off">
 
                 <div class="form-group mb-4 text-color-header fw-bold">
                     <label for="Username">Tên đăng nhập</label>
