--- a/K_Bridge/Views/User/EditPass.cshtml
+++ b/K_Bridge/Views/User/EditPass.cshtml
@@ -5,7 +5,7 @@
 
 <div class="container mt-5">
     <div class="row justify-content-center">
-        <div class="col-md-6 col-lg-8">
+        <div class="col-10">
             <h2 class="text-color-header mb-4">Cập nhật mật khẩu</h2>
             <p class="fs-12 text-color-header">Nhập tên đăng nhập mới và mật khẩu hiện tại.</p>
 
