--- a/K_Bridge/Views/User/EditPhoneNum.cshtml
+++ b/K_Bridge/Views/User/EditPhoneNum.cshtml
@@ -5,8 +5,8 @@
 
 <div class="container mt-5">
     <div class="row justify-content-center">
-        <div class="col-md-6 col-lg-8">
-            <h2 class="text-color-header mb-4">Cập nhật Số điện thoại</h2>
+        <div class="col-10">
+            <h2 class="text-color-header my-2">Cập nhật Số điện thoại</h2>
             <p class="fs-12 text-color-header">Nhập tên đăng nhập và mật khẩu hiện tại.</p>
 
 
@@ -19,27 +19,25 @@
                 </div>
             </div>
 
-
-
             <form asp-action="EditPhoneNum" method="post" id="editPhoneNumForm">
 
                 <div class="form-group mb-4 text-color-header fw-bold">
                     <label for="Username">Tên đăng nhập</label>
-                    <input type="text" class="form-control focus bg-main-color-background text-color-header rounded-3 mt-2"
-                           placeholder="abc123" minlength="4" required
-                           asp-for="Username">
+                    <input type="text" class="flex-grow-1 fs-12 form-control border-0 text-color-header rounded-8 px-2 focus mt-2 bg-white"
+                           placeholder="Nhập tên đăng nhập của bạn" minlength="4" required autocomplete="new-username"
+                           asp-for="Username" > 
                 </div>
 
                 <div class="form-group mb-4 text-color-header fw-bold">
                     <label for="password">Mật khẩu</label>
-                    <input type="password" class="form-control bg-main-color-background focus text-color-header rounded-3 mt-2"
-                           minlength="8" required
+                    <input type="password" class="form-control bg-white focus border-0 text-color-header rounded-3 mt-2"
+                           minlength="8" required autocomplete="new-password"
                            placeholder="Nhập mật khẩu của bạn" asp-for="Password">
                 </div>
                 <div class="form-group mb-4 text-color-header fw-bold">
                     <label for="phone">Số điện thoại</label>
-                    <input type="text" class="form-control bg-main-color-background focus text-color-header rounded-3 mt-2"
-                           minlength="10" required
+                    <input type="text" class="form-control bg-white focus border-0 text-color-header rounded-3 mt-2"
+                           minlength="10" required autocomplete="new-phonenumber"
                            placeholder="Nhập số điện thoại của bạn" asp-for="NewPhoneNumber">
                 </div>
                 <div class="text-center d-flex justify-content-between w-100">
