--- a/K_Bridge/wwwroot/css/Style.css
+++ b/K_Bridge/wwwroot/css/Style.css
@@ -726,3 +726,26 @@ body {
 .form-control.bg-white {
     background-color: #FFF0E6 !important;
 }
+
+.file-upload-label,
+.color-input {
+    display: inline-block;
+    width: 100%;
+    height: 32px; /* Điều chỉnh chiều cao này cho phù hợp với thiết kế của bạn */
+    cursor: pointer;
+}
+
+.file-upload-label {
+    text-align: center;
+}
+
+.color-input {
+    min-width: 90%;
+    padding: 0 !important;
+}
+#content-display {
+    min-height: 100px; /* Chiều cao tối thiểu */
+    max-height: 400px; /* Chiều cao tối đa */
+    overflow-y: auto; /* Thêm thanh cuộn nếu nội dung vượt quá chiều cao tối đa */
+    resize: none; /* Ngăn người dùng thay đổi kích thước */
+}
