fix all edit in user

--- a/K_Bridge/Views/User/EditPhoneNum.cshtml
+++ b/K_Bridge/Views/User/EditPhoneNum.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Cập nhật số điện thoại";
 }
 
-<div class="container mt-5">
+<div class="container">
     <div class="row justify-content-center">
         <div class="col-10">
             <h2 class="text-color-header my-2">Cập nhật Số điện thoại</h2>
