--- a/K_Bridge/Views/User/EditEmail.cshtml
+++ b/K_Bridge/Views/User/EditEmail.cshtml
@@ -9,27 +9,27 @@
             <h2 class="text-color-header mb-4">Cập nhật email người dùng</h2>
             <p class="fs-12 text-color-header">Nhập email mới và mật khẩu hiện tại.</p>
 
-            <form asp-action="EditEmail" method="post" id="editEmailForm" autocomplete="off">
+            <form asp-action="EditEmail" method="post" id="editEmailForm">
 
                 <div class="form-group mb-4 text-color-header fw-bold">
                     <label for="Username">Tên đăng nhập</label>
-                    <input type="text" class="form-control focus bg-main-color-background text-color-header rounded-3 mt-2"
-                           placeholder="abc123" minlength="4" required
+                    <input type="text" class="form-control focus bg-white border-0 text-color-header rounded-3 mt-2"
+                           placeholder="abc123" minlength="4" required autocomplete="new-Username"
                            asp-for="Username">
                 </div>
 
                 <div class="form-group mb-4 text-color-header fw-bold">
                     <label for="password">Mật khẩu</label>
-                    <input type="password" class="form-control bg-main-color-background focus text-color-header rounded-3 mt-2"
-                           minlength="8" required
+                    <input type="password" class="form-control bg-white border-0 focus text-color-header rounded-3 mt-2"
+                           minlength="8" required autocomplete="new-Password"
                            placeholder="Nhập mật khẩu của bạn"
                            asp-for="Password">
                 </div>
 
                 <div class="form-group mb-4 text-color-header fw-bold">
                     <label for="email">Cập nhật Email</label>
-                    <input type="email" class="form-control bg-main-color-background focus text-color-header rounded-3 mt-2"
-                           minlength="8" required
+                    <input type="email" class="form-control bg-white border-0 focus text-color-header rounded-3 mt-2"
+                           minlength="8" required autocomplete="new-NewEmail"
                            placeholder="Nhập email của bạn"
                            asp-for="NewEmail">
                 </div>
