--- a/K_Bridge/Views/User/EditPass.cshtml
+++ b/K_Bridge/Views/User/EditPass.cshtml
@@ -22,27 +22,27 @@
 
                 <div class="form-group mb-4 text-color-header fw-bold">
                     <label for="Username">Tên đăng nhập</label>
-                    <input type="text" class="form-control focus bg-main-color-background text-color-header rounded-3 mt-2"
+                    <input type="text" class="form-control focus  bg-white border-0  text-color-header rounded-3 mt-2"
                            placeholder="abc123" minlength="4" required asp-for="Username">
                 </div>
 
                 <div class="form-group mb-4 text-color-header fw-bold">
                     <label for="password">Mật khẩu hiện tại</label>
-                    <input type="password" class="form-control bg-main-color-background focus text-color-header rounded-3 mt-2"
+                    <input type="password" class="form-control  bg-white border-0  focus text-color-header rounded-3 mt-2"
                            minlength="8" required
                            placeholder="Nhập mật khẩu hiện tại" asp-for="Password">
                 </div>
 
                 <div class="form-group mb-4 text-color-header fw-bold">
                     <label for="password">Mật khẩu mới</label>
-                    <input type="password" class="form-control bg-main-color-background focus text-color-header rounded-3 mt-2"
+                    <input type="password" class="form-control  bg-white border-0  focus text-color-header rounded-3 mt-2"
                            minlength="8" required
                            id="password"
                            placeholder="Nhập mật khẩu mới" asp-for="NewPassword">
                 </div>
                 <div class="form-group mb-4 text-color-header fw-bold">
                     <label for="password">Xác nhận mật khẩu mới</label>
-                    <input type="password" class="form-control bg-main-color-background focus text-color-header rounded-3 mt-2"
+                    <input type="password" class="form-control  bg-white border-0  focus text-color-header rounded-3 mt-2"
                            minlength="8" required
                            placeholder="Nhập lại mật khẩu mới" asp-for="ConfirmNewPassword">
                 </div>
