--- a/K_Bridge/Views/User/EditUserName.cshtml
+++ b/K_Bridge/Views/User/EditUserName.cshtml
@@ -9,8 +9,6 @@
             <h2 class="mb-2">Cập nhật tên đăng nhập</h2>
             <p class="fs-12 text-color-header">Nhập tên đăng nhập mới và mật khẩu hiện tại.</p>
 
-  
-
             <div class="position-fixed top-0 end-0 p-3" style="z-index: 11">
                 <div id="liveToastEditUsername" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
                     <div class="toast-body text-color-background fw-bold text-center rounded-bottom rounded-3"
@@ -25,16 +23,16 @@
             <form asp-action="EditUserName" method="post" id="editUserNameForm">
                 <div class="form-group mb-4 text-color-header fw-bold">
                     <label for="Username">Tên đăng nhập mới</label>
-                    <input type="text" class="form-control focus bg-transparent text-color-header rounded-3 mt-2"
+                    <input type="text" class="form-control focus bg-white border-0 text-color-header rounded-3 mt-2"
                            placeholder="abc123" minlength="4"
                            asp-for="NewUserName"
-                           required>
+                           required autocomplete="new-NewUserName">
                 </div>
 
                 <div class="form-group mb-4 text-color-header fw-bold">
                     <label for="password">Mật khẩu</label>
-                    <input type="password" class="form-control bg-main-color-background focus text-color-header rounded-3 mt-2"
-                           minlength="8" required
+                    <input type="password" class="form-control bg-white border-0 focus text-color-header rounded-3 mt-2"
+                           minlength="8" required autocomplete="New-Password"
                            asp-for="Password"
                            placeholder="Nhập mật khẩu của bạn">
                 </div>
