--- a/K_Bridge/Pages/Admin/Login.cshtml
+++ b/K_Bridge/Pages/Admin/Login.cshtml
@@ -4,47 +4,39 @@
     ViewData["Title"] = "Đăng nhập";
     Layout = "~/Views/Shared/_AdminBlankLayout.cshtml";
 }
-<div class="container-fluid" id="login-background">
-    <div class="row">
-        <div class="col-3"></div>
-        <div class="col-6 text-center mt-5">
-            <img src="/img/Logo_75.png" class="img-fluid" alt="Logo" width="100" height="100">
-
-        </div>
-        <div class="col-3"></div>
-    </div>
-    <div class="row">
-        <div class="col-3"></div>
-        <div class="col-6 text-center mt-5">
-            <img src="/img/logo_name.png" class="img-fluid" alt="Name">
-
-        </div>
-        <div class="col-3"></div>
-    </div>
-    <div class="row mt-5">
-        <div class="col-3 col-lg-4 "></div>
-        <div class="col-6 col-lg-4 login-container">
-            <div class="card-body">
-                <h5 class="card-title login-title">ĐĂNG NHẬP</h5>
-                <form method="post" class="mt-4">
-                    <div class="mb-3">
-                        <div for="username" class="login_subtitle">Tên đăng nhập</div>
-                        <input type="text" class="form-login" id="username" name="username" required>
+<div class="vh-100 d-flex justify-content-center align-items-center position-relative" id="login-background">
+    <div class="container row justify-content-center">
+            <div class="col-lg-6 col-10">
+                <div class="text-center mb-4">
+                    <img src="/img/Logo_75.png" class="img-fluid mb-3" alt="Logo" width="120" height="120">
+                </div>
+                <div class ="text-center mb-4">
+                    <img src="/img/logo_name.png" class="img-fluid" alt="Name">
+                </div>
+                <div class="login-container">
+                    <div class="card-body">
+                        <h5 class="card-title login-title text-center">ĐĂNG NHẬP</h5>
+                        <form method="post" class="mt-4">
+                            <div class="mb-3">
+                                <label for="username" class="login_subtitle">Tên đăng nhập</label>
+                                <input type="text" class="form-login border-0 bg-cream" placeholder="Nhập tên đăng nhập" id="username" name="username" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="password" class="login_subtitle">Mật khẩu</label>
+                                <input type="password" class="form-login border-0 bg-cream" placeholder="Nhập mật khẩu" id="password" name="password" required>
+                            </div>
+                            @if (!string.IsNullOrEmpty(Model.ErrorMessage))
+                            {
+                                <div class="alert alert-danger">
+                                    @Model.ErrorMessage
+                                </div>
+                            }
+                            <div class="text-center">
+                                <button type="submit" class="login-button mt-3">Đăng nhập</button>
+                            </div>
+                        </form>
                     </div>
-                    <div class="mb-3">
-                        <div for="password" class="login_subtitle">Mật khẩu</div>
-                        <input type="password" class="form-login" id="password" name="password" required>
-                    </div>
-                    @if (!string.IsNullOrEmpty(Model.ErrorMessage))
-                    {
-                        <div class="alert alert-danger">
-                            @Model.ErrorMessage
-                        </div>
-                    }
-                    <button type="submit" class="login-button mt-3">Đăng nhập</button>
-                </form>
+                </div>
             </div>
-        </div>
-        <div class="col-3 col-lg-4"></div>
     </div>
 </div>
