--- a/K_Bridge/wwwroot/css/Admin.css
+++ b/K_Bridge/wwwroot/css/Admin.css
@@ -69,6 +69,15 @@
         width: 90%;
     }
 }
+.background-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.2);
+    z-index: 0;
+}
 /*----------------------- ADMIN LAYOUT -----------------------*/
 #header-container {
     background: #8E6745;
