done bg admin login

--- a/K_Bridge/Pages/Admin/Login.cshtml
+++ b/K_Bridge/Pages/Admin/Login.cshtml
@@ -4,8 +4,8 @@
     ViewData["Title"] = "Đăng nhập";
     Layout = "~/Views/Shared/_AdminBlankLayout.cshtml";
 }
-<div class="vh-100 d-flex justify-content-center align-items-center position-relative" id="login-background">
-    <div class="background-overlay"></div>
+<div class="vh-100 d-flex justify-content-center align-items-center position-relative" style="background-color: #8E6745;">
+    <div class="background-overlay" id="login-background"></div>
     <div class="container row justify-content-center pb-4" style="z-index: 1;">
             <div class="col-lg-6 col-10">
                 <div class="text-center mb-4">
