--- a/K_Bridge/wwwroot/css/Admin.css
+++ b/K_Bridge/wwwroot/css/Admin.css
@@ -7,7 +7,13 @@
 #login-background {
     background-image: url('/img/background_2.png');
     background-repeat: repeat;
-    background-color: #8E6745;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.4;
+    z-index: 0;
 }
 
 .login-container {
@@ -68,15 +74,6 @@
         .login-container {
         width: 90%;
     }
-}
-.background-overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.2);
-    z-index: 0;
 }
 /*----------------------- ADMIN LAYOUT -----------------------*/
 #header-container {
